<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="age_hint">Enter your age</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_name">Daily Drink Target</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="edit_info_text">Edit Your Info</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="get_started">Get Started</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_notification_message_value">Hey… Lets drink some water…</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_continue">Continue</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="update">Update</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and make you tired.</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to survive.</string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="workout_hint">Your daily work out time in min/day</string>
</resources>
